# Agent-Bioinformatics-Interface-Benchmark

./: .gitignore  CLAUDE.md  README.md  README.zh.md  SUBMISSION.md  SUBMISSION.zh.md  pyproject.toml  run_ablation.sh  run_paper_models.sh
.github/workflows/: pages.yml
bench/: .env.example  BENCHMARK_SPEC.yaml  README.md  evaluation_suites.yaml  metadata.py  model_tiers.yaml
bench/agent_profiles/: A1_no_provenance.yaml  A3_no_diagnostic_hints.yaml  A4_no_permission_model.yaml  G1_readme_shell.yaml  G2_plain_tool_calling.yaml  G3_abi_control_layer.yaml  G4_information_matched_docs.yaml
bench/docs/: artifact_manifest.schema.json  evaluation_design_v0_8.md  evaluation_design_v0_9.md  failure_cases.md  feasibility_check_report.md  index.html  methods.md
bench/expected_answers/: easymeta_hidden_single_missing_resource.json  easymeta_single_missing_resource.json  plasmid_hidden_missing_input.json  plasmid_hidden_missing_resource.json  plasmid_hidden_tool_missing.json  plasmid_missing_input.json  plasmid_missing_resource.json  plasmid_tool_missing.json  rnaseq_contract_broken.json  rnaseq_hidden_missing_resource.json  (+4 more)
docs/: MULTI_MODEL_PLAN.md  SCORING_AUDIT.md
tests/: __init__.py  test_abi_bridge.py  test_abi_cli.py  test_benchmark_audit.py  test_checks_real_exec.py  test_claim_preflight_multimodel.py  test_config.py  test_direct_agent_providers.py  test_evidence_checks.py  test_explicit_scoring_function.py  test_g4_docs.py  test_generate_synthetic_data.py  test_group_tool_isolation.py  test_model_tiers.py  test_retry.py  test_score_run_real_exec.py  test_statistics_units.py
(+385 files in other folders)
