# ── Build system ──────────────────────────────────────────────────────
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "abi-bench"
version = "0.7.0"
description = "Agent-Bioinformatics Interface Benchmark — evaluates structured ABI control layer for LLM agent bioinformatics workflow operation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "ABI-Bench Contributors" }]
keywords = [
    "bioinformatics",
    "benchmark",
    "agent",
    "llm",
    "ai",
    "workflow",
    "evaluation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pyyaml>=6.0",
    "openai>=1.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

# ── Tool configs ──────────────────────────────────────────────────────

[tool.ruff]
target-version = "py310"
line-length = 125

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
exclude = ["workspaces/*", "traces/*", "results/*"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["bench"]
